--- a/blog.html
+++ b/blog.html
@@ -256,10 +256,93 @@
                         <p>OUR</p>
                         <h2>Privacy Policy</h2>
                     </div>
-                    
+                    <div class="single">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <div class="single-content wow fadeInUp">
+                                <h2>Privacy Policy</h2>
+                                <p>
+                                    At GLORGENS BUILDERS & DEVELOPERS, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your personal information when you visit our website or engage with our services.
+                                </p>
+                                <br><br>
 
-                </div>
-            </div>
+                                <h2>1. Information We Collect <br><br>
+                                    We collect the following types of information:</h2>
+                                <p>
+                                    Personal Information: This may include your name, email address, phone number, billing address, and other contact details that you provide when filling out forms on our website, subscribing to newsletters, or engaging with our services. <br><br>
+                                    Project Information: Information related to your construction or design projects, including site details, architectural preferences, and service requests. <br><br>
+                                    Technical Information: We may collect data about your usage of our website, such as IP address, browser type, pages visited, and other analytics via cookies and tracking tools.
+                                </p>
+                                <br><br>
+
+                                <h2>2. How We Use Your Information <br><br>
+                                    We use your information to:</h2>
+                                <p>
+                                    Provide Services: Personal information is used to process requests, complete projects, and communicate with you regarding your projects. <br><br>
+                                    Customer Support: To respond to inquiries, provide technical support, and offer customer service. <br><br>
+                                    Improving Our Services: We analyze website traffic and user behavior to enhance our service offerings and improve our website’s functionality. <br><br>
+                                    Marketing and Promotions: With your consent, we may send you promotional materials, newsletters, and updates regarding our services. You may opt out at any time.
+                                </p>
+                                <br><br>
+
+                                <h2>3. Sharing Your Information</h2>
+                                <p>
+                                    GLORGENS BUILDERS & DEVELOPERS will not sell, rent, or trade your personal information with third parties. However, we may share your information under the following circumstances: <br>
+                                    With Third-Party Service Providers: We may share your information with trusted third-party vendors to perform tasks on our behalf, such as payment processing, email communication, and website analytics. <br><br>
+                                    Legal Requirements: We may disclose your information if required by law or to protect the rights, property, or safety of GLORGENS BUILDERS & DEVELOPERS, our clients, or others.
+                                </p>
+                                <br><br>
+                                <h2>4. Cookies and Tracking Technologies</h2>
+                                <p>
+                                    Our website uses cookies and similar tracking technologies to enhance user experience and collect information about how visitors use our site. You may disable cookies through your browser settings, but doing so may affect the functionality of the website.
+                                </p>
+                                <br><br>
+                                <h2>5. Data Security</h2>
+                                <p>
+                                    We take appropriate security measures to protect your personal information from unauthorized access, alteration, or disclosure. However, no internet-based service is entirely secure, and we cannot guarantee absolute security.
+                                </p>
+                                <br><br>
+                                <h2>6. Data Retention</h2>
+                                <p>
+                                    We retain your personal information only for as long as necessary to fulfill the purposes outlined in this Privacy Policy or as required by law. Once your information is no longer needed, it will be securely deleted or anonymized.
+                                </p>
+                                <br><br>
+                                <h2>7. Your Rights</h2>
+                                <p>
+                                    You have the following rights regarding your personal information: <br><br>
+                                    Access: You can request access to the personal data we hold about you.
+                                    Correction: If any information is inaccurate or incomplete, you can request a correction.
+                                    Deletion: You can request the deletion of your personal data, subject to legal obligations.
+                                    Opt-out: You can unsubscribe from marketing communications at any time.
+                                    To exercise any of these rights, please contact us at  <b>glorgensarch@gmail.com.</b>
+                                </p>
+                                <br><br>
+                                <h2>8. Third-Party Links</h2>
+                                <p>
+                                    Our website may contain links to external sites. Please note that we are not responsible for the privacy practices of those websites, and this Privacy Policy applies only to GLORGENS BUILDERS & DEVELOPERS.
+                                </p>
+                                <br><br>
+                                <h2>9. Changes to This Policy</h2>
+                                <p>
+                                    We reserve the right to update this Privacy Policy at any time. Any changes will be posted on this page, and the revised policy will take effect as soon as it is posted.
+                                </p>
+                                <br><br>
+                                <h2>10. Contact Us</h2>
+                                <p>
+                                    If you have any questions or concerns about this Privacy Policy, please contact us at: <br><br>
+                                    Email: glorgensarch@gmail.com <br>
+                                    Phone: +91-7819939837 <br>
+                                    Address: Glorgens Builders & Developers, Palm view apartment, Pant Nagar, Khurram Nagar, Lucknow - 226022, Uttar Pradesh, India
+                                </p>
+                                
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                     </div>
+                  </div>
             <!-- Blog End -->
 
 
