--- a/about.html
+++ b/about.html
@@ -121,6 +121,14 @@
             India construction companies, international architecture, sustainable urban development, 
             smart city design, luxury residential projects, contemporary architecture
         ">
+        <!-- Open Graph meta tags -->
+    <meta property="og:title" content="GLORGENS BUILDERS & DEVELOPERS" />
+    <meta property="og:description" content="Providing high-quality architectural and interior design services." />
+    <meta property="og:image" content="https://www.glorgens.in/img/favicon.png" />
+    <meta property="og:url" content="https://www.glorgens.in/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="GLORGENS BUILDERS & DEVELOPERS" />
+    <meta property="og:locale" content="en_US" />
         <!-- Favicon -->
         <link rel="website icon" type="png" href="img/favicon.png">
 
