--- a/about.html
+++ b/about.html
@@ -352,11 +352,11 @@
                                 <p><i class="fa fa-phone-alt"></i>+91 7819939837</p>
                                 <p><i class="fa fa-envelope"></i>glorgensarch@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-youtube"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://x.com/GLORGENSBD"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=61567528773037"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.youtube.com/@glorgensbd"><i class="fab fa-youtube"></i></a>
+                                    <a href="https://www.instagram.com/glorgensbd/?igsh=MWQ0bWgyaDMwbGZxMw%3D%3D"><i class="fab fa-instagram"></i></a>
+                                    <!--<a href=""><i class="fab fa-linkedin-in"></i></a>-->
                                 </div>
                             </div>
                         </div>
