--- a/team.html
+++ b/team.html
@@ -262,143 +262,75 @@
                 <div class="container">
                     <div class="section-header text-center">
                         <p>Our Team</p>
-                        <h2>Meet Our Engineer</h2>
+                        <h2>Meet Our Team</h2>
                     </div>
                     <div class="row">
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/team-1.jpg" alt="Team Image">
+                                    <img src="img/clients.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Adam Phillips</h2>
-                                    <p>CEO & Founder</p>
+                                    <h2>Abdullah Khan</h2>
+                                    <p>Director</p>
                                 </div>
-                                <div class="team-social">
+                                <!--<div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/team-2.jpg" alt="Team Image">
+                                    <img src="img/clients.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Dylan Adams</h2>
-                                    <p>Civil Engineer</p>
+                                    <h2>Mudassir Khan</h2>
+                                    <p>Architect</p>
                                 </div>
-                                <div class="team-social">
+                                <!--<div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/team-3.jpg" alt="Team Image">
+                                    <img src="img/clients.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Jhon Doe</h2>
-                                    <p>Interior Designer</p>
+                                    <h2>Afroj Ahmad</h2>
+                                    <p>Construction Manager</p>
                                 </div>
-                                <div class="team-social">
+                                <!--<div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/team-4.jpg" alt="Team Image">
+                                    <img src="img/clients.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Josh Dunn</h2>
-                                    <p>Painter</p>
+                                    <h2>Faizur Rahman</h2>
+                                    <p>Bim architect</p>
                                 </div>
-                                <div class="team-social">
+                                <!--<div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="team-item">
-                                <div class="team-img">
-                                    <img src="img/team-1.jpg" alt="Team Image">
-                                </div>
-                                <div class="team-text">
-                                    <h2>Adam Phillips</h2>
-                                    <p>CEO & Founder</p>
-                                </div>
-                                <div class="team-social">
-                                    <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                            <div class="team-item">
-                                <div class="team-img">
-                                    <img src="img/team-2.jpg" alt="Team Image">
-                                </div>
-                                <div class="team-text">
-                                    <h2>Dylan Adams</h2>
-                                    <p>Civil Engineer</p>
-                                </div>
-                                <div class="team-social">
-                                    <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                            <div class="team-item">
-                                <div class="team-img">
-                                    <img src="img/team-3.jpg" alt="Team Image">
-                                </div>
-                                <div class="team-text">
-                                    <h2>Jhon Doe</h2>
-                                    <p>Interior Designer</p>
-                                </div>
-                                <div class="team-social">
-                                    <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="team-item">
-                                <div class="team-img">
-                                    <img src="img/team-4.jpg" alt="Team Image">
-                                </div>
-                                <div class="team-text">
-                                    <h2>Josh Dunn</h2>
-                                    <p>Painter</p>
-                                </div>
-                                <div class="team-social">
-                                    <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
