--- a/index.html
+++ b/index.html
@@ -1107,11 +1107,10 @@
                                 <p><i class="fa fa-phone-alt"></i>+91 7819939837</p>
                                 <p><i class="fa fa-envelope"></i>info@glorgensbd.in</p>
                                 <div class="footer-social">
-                                    <a href="https://x.com/GLORGENSBD"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://www.facebook.com/profile.php?id=61567528773037"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://www.youtube.com/@glorgensbd"><i class="fab fa-youtube"></i></a>
-                                    <a href="https://www.instagram.com/glorgensbd/?igsh=MWQ0bWgyaDMwbGZxMw%3D%3D"><i class="fab fa-instagram"></i></a>
-                                    <!--<a href=""><i class="fab fa-linkedin-in"></i></a>-->
+                                    <a href="https://www.linkedin.com/in/glorgensbuildersanddevelopers/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.youtube.com/@glorgensbuildersand_developers"><i class="fab fa-youtube"></i></a>
+                                    <a href="https://www.instagram.com/glorgensbuildersand_developers/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://linktr.ee/GLORGENS"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
