--- a/single.html
+++ b/single.html
@@ -407,7 +407,7 @@
                                 <h2>11. Contact Information</h2>
                                 <p>
                                     If you have any questions regarding these Terms & Conditions, please contact us at: <br><br>
-                                    Email: glorgensarch@gmail.com <br>
+                                    Email: info@glorgensbd.in <br>
                                     Phone: +91-7819939837 <br>
                                     Address: Glorgens Builders & Developers, Palm view apartment, Pant Nagar, Khurram Nagar, Lucknow - 226022, Uttar Pradesh, India
                                 </p>
