--- a/index.html
+++ b/index.html
@@ -983,8 +983,13 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Button in the middle -->
+                    <div class="text-center my-4">
+                        <a href="portfolio.html" class="btn btn-primary">More From Our Projects</a>
+                    </div>
                 </div>
             </div>
+            
             <!-- Blog End -->
 
 
