--- a/about.html
+++ b/about.html
@@ -307,7 +307,7 @@
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="about.html" class="nav-item nav-link active">About</a>
                                 <a href="service.html" class="nav-item nav-link">Service</a>
-                                <a href="team.html" class="nav-item nav-link">Team</a>
+                                <!--<a href="team.html" class="nav-item nav-link">Team</a>-->
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
                                 <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -463,7 +463,7 @@
                                 <h2>Useful Pages</h2>
                                 <a href="index.html">Home</a>
                                 <a href="contact.html">Contact Us</a>
-                                <a href="team.html">Our Team</a>
+                                <!--<a href="team.html">Our Team</a>-->
                                 <a href="portfolio.html">Projects</a>
                                 <a href="service.html">Services</a>
                             </div>
