--- a/blog.html
+++ b/blog.html
@@ -307,7 +307,7 @@
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="about.html" class="nav-item nav-link">About</a>
                                 <a href="service.html" class="nav-item nav-link">Service</a>
-                                <a href="team.html" class="nav-item nav-link">Team</a>
+                                <!--<a href="team.html" class="nav-item nav-link">Team</a>-->
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
                                 <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
@@ -477,7 +477,7 @@
                                 <a href="index.html">Home</a>
                                 <a href="about.html">About Us</a>
                                 <a href="service.html">Services</a>
-                                <a href="team.html">Our Team</a>
+                                <!--<a href="team.html">Our Team</a>-->
                                 <a href="portfolio.html">Projects</a>
                                 <a href="contact.html">Contact</a>
                             </div>
