--- a/single.html
+++ b/single.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GLORGENS BUILDERS & DEVELOPERS</title>
         <meta property="og:image" content="https://github.com/Glorgens/GBD/blob/main/favicon.png">
         <meta property="og:url" content="https://glorgensbd.in">
